fix margin issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 	justify-content: center;
 	align-items: center;
 
-	min-height: 100vh;
+	max-height: 100vh;
 
 	font-family: 'Spartan', 'sans-serif';
 	color: #fff;
@@ -163,12 +163,6 @@ header {
 	cursor: pointer;
 }
 
-@media (min-width: 630px) {
-	.keypad {
-		gap: 1.5rem;
-	}
-}
-
 .key:focus {
 	outline: none;
 }
@@ -200,4 +194,13 @@ input[type='number']::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
+}
+
+@media (min-width: 630px) {
+	body {
+		min-height: 100vh;
+	}
+	.keypad {
+		gap: 1.5rem;
+	}
 }
